<resources>
    <string name="app_name">AnyTimeMedicine</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- Navigation Drawer Menu Items -->
    <string name="home">Home</string>
    <string name="remedy">Remedy</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="healthcare_centres">Healthcare Centres</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Dynamic -->
    <plurals name="txt_count_healthcare_centres">
        <item quantity="one">We found only 1 healthcare centre which is close to your current location</item>
        <item quantity="other">We found %1$d healthcare centres which are close to your current location</item>
    </plurals>

    <string name="txt_home_remedy_title">Home remedies for curing %1$s</string>
    <string name="txt_otc_remedy_title">OTC medicines for curing %1$s</string>
    <string name="txt_welcome">Welcome %1$s</string>
    <string name="txt_healthcare_phone_number">Ph: %1$s</string>
    <string name="txt_healthcare_distance">%1$s miles</string>


    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_phone_number">Phone Number</string>

    <!-- Errors -->
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_last_name">Last name required</string>
    <string name="err_msg_first_name">First name required</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="network_unavailable">Network not available</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="user_already_registered">This email id is already registered with ATMedicine</string>
    <string name="connection_error_msg">Can\'t connect to the network. Please check your internet connection</string>
    <string name="password_criteria_unmatch_title">Password doesn\'t match criteria</string>
    <string name="password_criteria_unmatch_subtitle">Your entered password must be between 8 to 15 characters long containing both Alphabets and Numbers</string>
    <string name="password_unmatch_title">Password doesn\'t match</string>
    <string name="password_unmatch_subtitle">Your entered password must match with each other. Please enter again</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="wrong_password_msg">You entered wrong password. Kindly check your password and try again</string>
    <string name="login_error_title">Wrong details</string>
    <string name="login_error_msg">Seems you entered wrong details. Please check the Email Id and Password again</string>
    <string name="enable_gps_title">Enable GPS</string>
    <string name="enable_gps_msg">You are trying to use Location Services. Please enable GPS to fetch nearest healthcare centre around you.</string>

    <!-- Success -->
    <string name="success_registration">You are successfully registered with ATM-Any Time Medicine</string>
    <string name="updated">Updated</string>
    <string name="profile_updated">Your information has been successfully updated</string>
    <string name="password_updated">Your password has been changed successfully</string>
    <string name="reset_password_success">A new password has been sent to your registered email id</string>


    <!-- General texts -->
    <string name="txt_login">Login</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_view_history">View History</string>
    <string name="txt_update">Update</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_driving_direction">Driving Direction</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="txt_height">Height (Feet and Inches)</string>
    <string name="txt_weight">Weight (in Pounds)</string>
    <string name="txt_close">Close</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_body_part">Select a body part</string>
    <string name="txt_symptom">Select a Symptom</string>
    <string name="txt_find_remedy">Find Remedy</string>
    <string name="txt_sex">Sex</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_age">Age</string>
    <string name="txt_bmi_diet_plan">Get BMI and Diet Plan</string>
    <string name="txt_locate_healthcare_centre">Locate Nearest Healthcare Centre</string>
    <string name="txt_update_profile">Update Profile Information</string>

    <string name="select_insurance_provider">Select your Insurance Provider</string>
    <string name="insurance_provider_disclaimer">If your Insurance Provider is not listed here we are sorry for the moment. We will try adding more Insurance Providers in the future</string>

    <string name="txt_disclaimer">Disclaimer</string>
    <string name="remedy_disclaimer">These remedies are only for quick relief, however if you have any previous medication history or allergy of any kind than we suggest you to consult your Doctor first</string>
    <string name="emergency_disclaimer">Call 911 for any serious emergency</string>

    <!-- titles - subtitles -->
    <string name="login_title">ATM</string>
    <string name="login_subtitle">Any Time Medicine</string>
    <string name="change_password_title">Change your Password</string>
    <string name="forgot_password_title">Forgot your Password ?</string>
    <string name="forgot_password_subtitle">If you are a registered user a random password will be sent to the email id you provide here</string>
    <string name="create_account_title">Create account with - ATM</string>
    <string name="create_account_subtitle">Your personal healthcare solution</string>
    <string name="update_profile_title">Update your Profile</string>
    <string name="settings_title">Easily manage your settings from here</string>
    <string name="diet_plan_title">Eat Healthy Stay Fit</string>
    <string name="diet_plan_subtitle">Follow a diet plan specific to your BMI</string>
    <string name="view_history_title">View your recent medical history here</string>
    <string name="remedy_title">Having a health Concern ?</string>
    <string name="remedy_subtitle">Find a Remedy</string>
    <string name="healthcare_centre_title">Need Assistance ?</string>
    <string name="healthcare_centre_subtitle">Locate your nearest healthcare centre covered under your insurance</string>


    <!-- links -->
    <string name="link_create_account">No account yet? Create one</string>
    <string name="link_forgot_password">forgot password ?</string>
    <string name="link_login">Already a member ? Login</string>

</resources>