<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/txt_logo_remedy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/remedy_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_dark" />

        <TextView
            android:id="@+id/txt_logo_remedy_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/remedy_subtitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_dark" />

        <TextView
            android:id="@+id/txt_body_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:text="@string/txt_body_part"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <Spinner
            android:id="@+id/spinner_body_part"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_symptom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/txt_symptom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <Spinner
            android:id="@+id/spinner_symptom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_find_remedy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/txt_find_remedy"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>