<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/txt_logo_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <ImageView
            android:id="@+id/img_healthcare_centre"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_update_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:background="@color/primary_dark"
            android:padding="12dp"
            android:text="@string/txt_update_profile"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_change_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/primary_dark"
            android:padding="12dp"
            android:text="@string/txt_change_password"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_view_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/primary_dark"
            android:padding="12dp"
            android:text="@string/txt_view_history"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>