<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/txt_logo_get_diet_plan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/diet_plan_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_dark" />

        <TextView
            android:id="@+id/txt_logo_get_diet_plan_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/diet_plan_subtitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />


        <TextView
            android:id="@+id/txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_sex"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/AtmTextLabelTheme">

            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true" />

            <TextView
                android:id="@+id/txt_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_male"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_dark" />

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/txt_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_female"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_dark" />
        </RadioGroup>

        <View
            android:id="@+id/toolbar_shadow_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toolbar_shadow"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/txt_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/txt_age"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <NumberPicker
            android:id="@+id/picker_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/input_border"
            android:padding="10dp">

        </NumberPicker>

        <View
            android:id="@+id/toolbar_shadow_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toolbar_shadow"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/txt_height"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/input_border"
            android:orientation="horizontal"
            android:padding="10dp">

            <NumberPicker
                android:id="@+id/picker_height_feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>

            <NumberPicker
                android:id="@+id/picker_height_inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>

        </LinearLayout>

        <View
            android:id="@+id/toolbar_shadow_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toolbar_shadow"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/txt_weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <NumberPicker
            android:id="@+id/picker_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/input_border"
            android:padding="10dp">

        </NumberPicker>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_get_diet_plan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/txt_bmi_diet_plan"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>