<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/txt_logo_update_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_profile_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_dark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/AtmTextLabelTheme">

            <EditText
                android:id="@+id/txt_input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:textColor="@color/primary_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AtmTextLabelTheme">

            <EditText
                android:id="@+id/txt_input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:textColor="@color/primary_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AtmTextLabelTheme">

            <EditText
                android:id="@+id/txt_input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:textColor="@color/primary_dark" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_insurance_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/select_insurance_provider"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <Spinner
            android:id="@+id/spinner_insurance_providers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/toolbar_shadow_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toolbar_shadow"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/txt_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/txt_dob"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <DatePicker
            android:id="@+id/picker_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/input_border"
            android:padding="10dp">

        </DatePicker>

        <View
            android:id="@+id/toolbar_shadow_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toolbar_shadow"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/txt_height"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/input_border"
            android:orientation="horizontal"
            android:padding="10dp">

            <NumberPicker
                android:id="@+id/picker_height_feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </NumberPicker>

            <NumberPicker
                android:id="@+id/picker_height_inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </NumberPicker>

        </LinearLayout>

        <View
            android:id="@+id/toolbar_shadow_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toolbar_shadow"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/txt_weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_dark" />

        <NumberPicker
            android:id="@+id/picker_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/input_border"
            android:padding="10dp">

        </NumberPicker>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/AtmTextLabelTheme">

            <EditText
                android:id="@+id/txt_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/primary_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/txt_update"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>